--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 crewai
-crewai-tools
-litellm
-ipykernel
-'litellm[proxy]'
-crewai[google-genai]
-tavily-python
-firecrawl-py
-pypdf
-xmltodict
-langchain-community
+# crewai-tools
+# litellm[proxy]
+# crewai[google-genai]
+# litellm
+# tavily-python
+# firecrawl-py
+# pypdf
+# xmltodict
+# langchain-community
+# ipykernel
