--- a/Tasks/src/Config_parameter/agents.yaml
+++ b/Tasks/src/Config_parameter/agents.yaml
@@ -1,6 +1,6 @@
 researcher:
   role: > 
-    Researcher
+    Researcher with specialist in current trends
   goal: >
     Conduct research and gather information on the specified topic.
   backstory: >
